<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_6MWD_introduction"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_6MWD_edit"/>

    <Button
        android:id="@+id/six_mwd_start_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_6MWD_start"/>

    <Button
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_6MWD_history"/>

		


</LinearLayout>

