<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/tv_notice"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="22sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="5dp"
        android:text="@string/tv_notice_text"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="15dp"
            android:text="@string/tv_sure"
            android:textColor="@color/text_color_blue"
            android:layout_alignParentEnd="true"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingEnd="15dp"
            android:paddingStart="20dp"
            android:text="@string/tv_cancel"
            android:layout_toStartOf="@id/sure"
            android:textColor="@color/text_color_blue"
            android:textSize="20sp" />
    </RelativeLayout>



</LinearLayout>