<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundGrey"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/tv_pef_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_drug_record"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:layout_marginStart="12dp"
            android:src="@drawable/button_back_arrow"/>
        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/tv_add"
            android:textSize="18sp"
            android:textColor="@color/text_color_white"
            android:clickable="true"
            android:layout_marginEnd="15dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pef_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/tv_today_drug"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/tv_history"
            android:textSize="16sp"
            android:layout_margin="15dp"
            android:clickable="true"
            android:textColor="@color/text_color_grey"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_today_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/tv_today_no_data"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clipToPadding="false"/>


</LinearLayout>
