<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/white"
    tools:context=".activity.depression.DepressionActivity2"
    tools:showIn="@layout/activity_depression2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/shape_cat_scale_pressed"
                android:text="!"/>
            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_notice"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_centerVertical="true"
                android:text="@string/tv_tip_scale"
                android:textSize="15sp"
                android:textColor="@color/blue"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_question2"
            android:textSize="18sp"
            android:textColor="@color/darkGrey"/>

        <TextView
            android:id="@+id/tv_not"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_select_scare"
            android:text="@string/tv_not"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_sometimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_select_scare"
            android:text="@string/tv_sometimes"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_select_scare"
            android:text="@string/tv_half"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_everyday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_select_scare"
            android:text="@string/tv_everyday"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>



</ScrollView>
